--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div>
                     <h1 style="z-index:2; position: absolute;color: white; font-size: 60px; text-shadow: 1.5px 1.5px 1px green;">&nbsp;&nbsp;&nbsp;Explore the sights</h1><br><br><br><br>
                     <h1 style="z-index:2; position: absolute;color: white; font-size: 60px; text-shadow: 1.5px 1.5px 1px green;">&nbsp;&nbsp;&nbsp;Of Azores</h1>
-                    <button style="background-color: white; color: black; border-radius: 25px; position: absolute; z-index: 2; height: 45px; width: 135px; font-size: 15px; border-color: green; border-width: 3px; outline:none; position: relative; top:280px; right: 650px;">Book now</button>
+                    <button style="background-color: white; color: black; border-radius: 25px; position: absolute; z-index: 2; height: 45px; width: 135px; font-size: 15px; border-color: green; border-width: 3px; outline:none; top:350px; right: 1340px;">Book now</button>
                     <img src="https://images.squarespace-cdn.com/content/v1/6776fb052b2d52105bdde525/79abddda-1aad-4bb0-925e-4d10103dc675/Trends+Campaign_Waterculturalism_V1_R3.jpg?format=2500w" alt="bg-image" class="bg-image" style="z-index: 1;">
                     <div class="navigate">&lt</div>
                     <div class="navigate1">></div>
