--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <body>
         <div>
             <header style="display: flex; flex-wrap: wrap; justify-content:space-between;">
-                <h2 style="position:relative; bottom: 7px;">&nbsp;island*</h2>
-                <h3>Our tours</h3>
-                <h3>About Us</h3>
-                <h3>Booking</h3>
-                <h3>FAQ</h3>
+               <h2 style="position:relative; bottom: 7px;">&nbsp;island*</h2>
+                <a href="ourtours.html"><h3>Our tours</h3></a>
+                <a href="aboutus.html"><h3>About Us</h3></a>
+                <a href="booking.html"><h3>Booking</h3></a>
+                <a href="faq.html"><h3>FAQ</h3></a>
                 <img src="https://cdn2.iconfinder.com/data/icons/most-useful-icons-4/50/HAMBURGER_MENU-512.png" alt="handburger image" style="height: 35px; width: 35px; position: relative; top: 10px;">
             </header>
            <main>
